--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@react-three/drei": "^9.108.3",
+    "@tailwindcss/forms": "^0.5.7",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
