--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.1.5",
-    "@react-three/drei": "^9.108.3",
-    "@tailwindcss/forms": "^0.5.7",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "daisyui": "^4.12.10",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+	"name": "frontend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"backend": "cd ../backend && python3 hangman/main.py",
+		"frontend": "next dev",
+		"start:all": "concurrently \"npm run backend\" \"npm run frontend\""
+	},
+	"dependencies": {
+		"@heroicons/react": "^2.1.5",
+		"@react-three/drei": "^9.108.3",
+		"@tailwindcss/forms": "^0.5.7",
+		"next": "14.2.4",
+		"react": "^18",
+		"react-dom": "^18"
+	},
+	"devDependencies": {
+		"daisyui": "^4.12.10",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.4",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"concurrently": "^8.2.2"
+	}
 }
