--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,12 @@
 		"react-dom": "^18"
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^8.1.0",
+		"concurrently": "^8.2.2",
 		"daisyui": "^4.12.10",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.4",
 		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"concurrently": "^8.2.2"
+		"tailwindcss": "^3.4.1"
 	}
 }
